# Minder3D

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.md  README_Dev.md  pyproject.toml  requirements.txt
.github/workflows/: auto-format.yml  lint.yml  publish.yml  snorkell-auto-documentation.yml
data/: .gitignore  README.md
src/: .gitignore  ptvState.py  ptvUtils.py  ptvWindow.py  pytubeview.py  pytubeview.ui  pytubeview_model.py  soViewer2D.py  soViewer2DRenderWindowInteractor.py  soViewer3D.py  soViewer3DRenderWindowInteractor.py  soViewerUtils.py  sovChatPanelWidget.py  sovColorMapUtils.py  sovImageProcessLogic.py  sovImageProcessPanelWidget.py  sovImageProcessPanelWidget.ui  sovImageTablePanelUtils.py  sovImageTablePanelWidget.py  sovImageTablePanelWidget.ui  sovInfoTablePanelWidget.py  sovInfoTablePanelWidget.ui  sovLungAIPanelWidget.py  sovLungAIPanelWidget.ui  sovLungCTALogic.py  sovLungCTAPanelWidget.py  sovNewTaskPanelWidget.py  sovNewTaskPanelWidget.ui  sovOtsuLogic.py  sovOtsuPanelWidget.py  sovOtsuPanelWidget.ui  sovPreProcessLogic.py  sovPreProcessPanelWidget.py  sovPreProcessPanelWidget.ui  sovScreenCapturePanelWidget.py  sovScreenCapturePanelWidget.ui  sovTablePanelWidget.py  sovTablePanelWidget.ui  sovTubesPanelWidget.py  sovUtils.py  (+50 more)
src/minder3d/: __init__.py  __main__.py  config.py  main.py  minder3DState.py  minder3DWindow.py  minder3DWindow.ui  parse_args.py  ui_minder3DWindow.py
src/minder3d/lib/: README-Resources.md  sovChatPanelWidget.py  sovChatPanelWidget.ui  sovImageProcessLogic.py  sovImageProcessPanelWidget.py  sovImageTablePanelUtils.py  sovImageTablePanelWidget.py  sovImageTablePanelWidget.ui  sovImageTableSettings.py  sovImportDICOMPanelWidget.py  sovImportDICOMPanelWidget.ui  sovImportDICOMSettings.py  sovInfoTablePanelWidget.py  sovInfoTablePanelWidget.ui  sovLungCTALogic.py  sovLungCTAPanelWidget.py  sovLungCTAPanelWidget.ui  sovNewTaskPanelWidget.py  sovNewTaskPanelWidget.ui  sovObjectPanelWidget.py  sovObjectPanelWidget.ui  sovOtsuPanelWidget.py  sovScreenCapturePanelWidget.py  sovTubesPanelWidget.py  sovUtils.py  sovView2DPanelWidget.py  sovView2DPanelWidget.ui  sovView2DRenderWindowInteractor.py  sovView2DResources.py  sovView2DResources.qrc  sovView2DUtils.py  sovView3DPanelWidget.py  sovView3DPanelWidget.ui  sovView3DRenderWindowInteractor.py  sovView3DUtils.py  sovVisualizationPanelWidget.py  sovVisualizationPanelWidget.ui  sovWelcomePanelWidget.py  sovWelcomePanelWidget.ui  ui_sovChatPanelWidget.py  (+11 more)
