[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "minder3d"
description = "Using AI to foster innovation in the exploration of radiological images."
license = {text = "Apache 2.0"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version", "readme"]

dependencies = [
  'PyQt6',
  'PySide6',
  'numpy',
  'vtk',
  #'itk',  # Do not install until ITK pypi is updated
]

[project.scripts]

minder3d = "minder3d.main:main"

[project.optional-dependencies]
develop = [
  'black==24.4.2',
  'pylint',
  'flake8'
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "minder3d.__version__"}
readme = {file = ["README.md"]}

[tool.black]
line-length = 80
skip-string-normalization = 1
target_version = ['py311']
required_version = "24.4.2"
include = ["src"]
force-exclude = '''
(
  ui_.*|.*\.ui|\.gitignore
)
'''

[tool.flake8]
max-line-length = 80
extend-ignore = ["E501"]

[tool.isort]
profile = "black"
skip_glob = ["ui_*", "*.ui"]
line_length = 80

[tool.pylint]
max-line-length = 80

[tool.ruff]
include = ["src"]
exclude = ["*.ui", "ui_*", ".gitignore"]
line-length = 80
