[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "minder3d"
description = "Using AI to foster innovation in the exploration of radiological images."
readme = "README.md"
authors = [{name = "Stephen R. Aylward", email = "stephen@aylward.org"}]
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: Apache 2.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["medical", "image", "volume", "ai", "visualization"]
dynamic = ["version"]

dependencies = [
  'PyQt6',
  'PySide6',
  'numpy',
  'vtk',
  #'itk',  # Do not install until ITK pypi is updated
]

[project.scripts]
minder3d = "minder3d.__main__:main"

[project.urls]
Homepage = "https://github.com/aylward/Minder3D"
Aylward = "https://www.aylward.org"

[project.optional-dependencies]
dev = [
  'qt6-tools',
  'black==24.4.2',
  'pylint',
  'flake8',
  'isort',
  'pre-commit',
  'bumpver',
  'twine',
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "minder3d.__version__"}

[tool.bumpver]
current_version = "2024.05.0a0"
version_pattern = "YYYY.0M.PATCH[PYTAGNUM]"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"']
"src/minder3d/__init__.py" = ["__version__ = '{version}'"]

[tool.black]
line-length = 80
skip-string-normalization = true
target_version = ['py311']
include = ["src"]
force-exclude = '''
(
  ui_.*|.*\.ui|\.gitignore|.*\.yml|.*\.yaml|.*\.toml|.*\.png
)
'''

[tool.flake8]
max-line-length = 80
extend-ignore = ["E501"]

[tool.isort]
profile = "black"
skip_glob = ["ui_*", "*.ui"]
line_length = 80

[tool.pylint]
max-line-length = 80

[tool.ruff]
include = ["*.py"]
exclude = ["ui_*"]
line-length = 80
